examples/test/testpolicy14199.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14199
  namespace: namespace188
spec:
  podSelector:
    matchLabels:
      key12: value13
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key42: value27
          key49: value43
      podSelector:
        matchLabels:
          key13: value30
          key34: value20
